--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
+# Flags of Cmake
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -std=c++20 -fsized-deallocation")
 
+# Qt configs
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -8,13 +10,24 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Find all the libs
 find_package(QT NAMES Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 find_package (glog 0.6.0 REQUIRED)
 
+# Add all files
 file(GLOB_RECURSE SOURCE_FILES true "./*.cpp" "./*.h" "./*.ui" "./*.qrc")
 
-set(PROJECT_SOURCES ${SOURCE_FILES} utils/vectorStructure.h utils/doublyLinkedList.cpp utils/doublyLinkedList.h)
+# Var PROJECT_SOURCES
+set(PROJECT_SOURCES ${SOURCE_FILES})
+
+# Copying Files
+#add_custom_target(COPY_IMAGES)
+#add_custom_command(
+#        TARGET COPY_IMAGES
+#        COMMAND ${CMAKE_COMMAND} copy
+#        ${CMAKE_CURRENT_BINARY_DIR}/images/
+#        ${CMAKE_BINARY_DIR}/bin/images
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(${CMAKE_PROJECT_NAME}
