--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 build
+html
 # Created by https://www.toptal.com/developers/gitignore/api/linux,windows,macos,c++,cmake,clion+all,visualstudiocode,qtcreator
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,windows,macos,c++,cmake,clion+all,visualstudiocode,qtcreator
 
